# research

./: .gitignore  CLAUDE.md  Makefile  README.md  RESEARCH_MANUAL.md  SOURCES.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: citations.sqlite  p1_control_ledger.jsonl  p2_hard_ledger.jsonl  p3v2_audited_ledger.jsonl  p3v2_ledger.jsonl  p3v2_vague_ledger.jsonl  run_ledger.jsonl
core/: util.py
core/adapters/: base.py  cli.py  mock.py  registry.py  tokens.py
core/audit/: claims.py  validate.py
core/budget/: estimator.py  pricing.py
core/citations/: db.py
core/dashboard/: status.py
core/environments/: base.py
core/experiment_registry/: ledger.py
core/plotting/: build_all.py  pilot_tables.py
core/runner/: loop.py
core/sealed/: access.py
core/statistics/: power.py  resampling.py
core/tracing/: events.py
docs/: REPRODUCIBILITY.md
papers/p1_toolmorph/: DECISION.md  README.md  analysis_plan.yaml  claim_registry.csv  exclusions.csv  metamorphic.py  pilot.py  research_contract.yaml  sim_agents.py  stnf.py  tasks.py
papers/p2_crosscheck/: DECISION.md  README.md  analysis_plan.yaml  budget.py  claim_registry.csv  complementarity.py  exclusions.csv  (+4 more)
program/: AI_ASSISTANCE_DISCLOSURE.md  HUMAN_SIGNOFF_TEMPLATE.md  WRAPUP_DASHBOARD.md  budget.yaml  deadlines.yaml  decisions.md  fatal_overlap.md  overlap_matrix.md  pricing.yaml.template  references.bib  risks.md  status.yaml
scripts/: seed_citations.py
templates/: claim_registry.csv  exclusions.csv  issue.yaml  llm_use_log.csv  research_contract.yaml  run_ledger.schema.json
(+92 files in other folders)
